# Pokerust

./: README.md
DBSetup/: MySQL_Create.txt  README.txt  kantodb.json
pokemon_api/: Cargo.toml
pokemon_api/src/: main.rs  mysql_client.rs
